--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -2,11 +2,11 @@
 
 // Define defaults for each variable.
 
-$base-font-family: Helvetica, Arial, Oswald, sans-serif, !default;
-$base-font-size: 14px !default;
+$base-font-family: Open Sans, Arial, sans-serif, !default;
+$base-font-size: 16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.6 !default;
+$base-line-height: 1.8 !default;
 
 $spacing-unit:     30px !default;
 
@@ -29,8 +29,9 @@ $footer-height: $header-height * 1.05 !default;
 $footer-text-color: lighten(invert($theme-color), 25%) !default;
 $footer-background-color: darken($theme-color, 5%) !default;
 
-$banner-height: 640px !default;
+$banner-height: 420px !default;
 $banner-text-color: lighten($white-color, 0%) !default;
+$banner-text-shadow: 2px 2px 4px #111111;
 $banner-background: rgba(0,0,0,0.8) !default;
 
 // Width of the content area
