--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -574,6 +574,7 @@ html {
   transition: height 0.2s;
 
   .page-banner-img {
+    margin-top: $header-height;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -603,7 +604,7 @@ html {
 
     color: $banner-text-color;
     padding: 10px 5px;
-    text-shadow: 1px 1px 2px #33333355;
+    text-shadow: $banner-text-shadow;
 
     & > *:first-child {
       margin: 0;
